<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.pustefixframework</groupId>
  <artifactId>pustefixframework</artifactId>
  <version>0.20.13-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Pustefix Framework</name>
  <url>http://pustefix-framework.org</url>
  <description>Pustefix Web Application Framework</description>

  <licenses>
    <license>
      <name>GNU Lesser General Public License, Version 2.1</name>
      <url>http://www.gnu.org/licenses/lgpl-2.1.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <organization>
    <name>United Internet</name>
    <url>http://www.unitedinternet.de/</url>
  </organization>

  <issueManagement>
    <system>trac</system>
    <url>http://dev.pustefix-framework.org/</url>
  </issueManagement>

  <scm>
    <connection>scm:git:https://github.com/pustefix-projects/pustefix-framework.git</connection>
    <developerConnection>scm:git:https://github.com/pustefix-projects/pustefix-framework.git</developerConnection>
    <url>https://github.com/pustefix-projects/pustefix-framework</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <developers>
    <developer>
      <name>Martin Leidig</name>
      <id>mtld</id>
      <email>mtld@schlund.de</email>
      <organization>United Internet</organization>
      <roles>
        <role>Java Development</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <name>Sebastian Marsching</name>
      <id>smarsching</id>
      <email>smarsching@users.sourceforge.net</email>
      <organization>United Internet</organization>
      <roles>
        <role>Java Development</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <name>Jens Lautenbacher</name>
      <id>jenstl</id>
      <email>jenstl@users.sourceforge.net</email>
      <organization>United Internet</organization>
      <roles>
        <role>Java Development</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <name>Michael Hartmeier</name>
      <id>mlhartme</id>
      <email>mlhartme@users.sourceforge.net</email>
      <organization>United Internet</organization>
      <roles>
        <role>Java Development</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
  </developers>

  <build>
    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-ssh-external</artifactId>
        <version>2.6</version>
      </extension>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-http</artifactId>
        <version>2.6</version>
      </extension>
    </extensions>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-eclipse-plugin</artifactId>
          <version>2.9</version>
          <configuration>
            <downloadSources>true</downloadSources>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.17</version>
          <configuration>
            <useFile>false</useFile>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.4</version>
          <configuration>
            <archive>
              <addMavenDescriptor>false</addMavenDescriptor>
              <manifest>
                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
              </manifest>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>2.2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>2.5</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>2.6</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.1</version>
          <configuration>
            <source>1.8</source>
            <target>1.8</target>
          </configuration>
        </plugin>
        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
           <version>2.5</version>
           <configuration>
             <!-- Workaround for http://jira.codehaus.org/browse/MRELEASE-271 -->
             <preparationGoals>clean install</preparationGoals>
             <goals>deploy</goals>
           </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>2.9.1</version>
           <configuration>
             <additionalparam>-Xdoclint:none</additionalparam>
           </configuration>
         </plugin>

        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-plugin-plugin</artifactId>
                    <versionRange>[3.2,)</versionRange>
                    <goals>
                      <goal>descriptor</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore />
                  </action>
                </pluginExecution>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <versionRange>[1.3,)</versionRange>
                    <goals>
                      <goal>run</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore />
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>2.7</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.9.1</version>
        <configuration>
          <additionalparam>-Xdoclint:none</additionalparam>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-changelog-plugin</artifactId>
        <version>2.2</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>2.4</version>
      </plugin>
    </plugins>
  </reporting> 
  <distributionManagement>
    <repository>
      <id>sonatype-nexus-staging</id>
      <name>Sonatype Nexus Staging Repository</name>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
<!--
    <snapshotRepository>
      <id>sonatype-nexus-snapshots</id>
      <name>Sonatype Nexus Snapshots Repository</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
    </snapshotRepository>
-->
    <snapshotRepository>
      <id>ciso-snapshot</id>
      <url>https://artifactory.1and1.org/artifactory/ciso-snapshot</url>
    </snapshotRepository>
    <site>
      <id>pustefix</id>
      <url>scpexe://pustefix@pustefix-hp.schlund.de/home/pustefix/www/pustefix-docs/0.18.x</url>
    </site>
  </distributionManagement>
  
  <profiles>
    <profile>
      <id>release-signed-artifacts</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-enforcer-plugin</artifactId>
            <version>1.4.1</version>
            <executions>
              <execution>
                <id>enforce-gpg-passphrase</id>
                <goals>
                  <goal>enforce</goal>
                </goals>
                <configuration>
                  <rules>
                    <requireProperty>
                      <property>gpg.passphrase</property>
                    </requireProperty>
                  </rules>
                  <fail>true</fail>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <configuration>
                  <passphrase>${gpg.passphrase}</passphrase>
                </configuration>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <modules>
    <module>pustefix-libs</module>
    <module>pustefix-webservices</module>
    <module>pustefix-plugins</module>
    <module>pustefix-archetypes</module>
    <module>pustefix-core</module>
    <module>pustefix-samples</module>
    <module>pustefix-editor</module>
    <module>pustefix-docbook</module>
    <module>pustefix-live</module>
    <module>pustefix-tutorial</module>
    <module>pustefix-agent</module>
    <module>pustefix-cdi</module>
    <module>pustefix-security</module>
    <module>pustefix-cmis</module>
  </modules>

</project>
